# send_email_fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example_test.js  pyproject.toml
.github/workflows/: build.yaml
ansible/: main.yml  replicator.yml
ansible/ansible_inventory/: hosts
ansible/roles/configure-mysql1/defaults/: main.yml
ansible/roles/configure-mysql1/tasks/: main.yml  mysql1.yml
ansible/roles/configure-mysql2/defaults/: main.yml
ansible/roles/configure-mysql2/tasks/: main.yml  mysql2.yml
ansible/roles/configure-mysql2/templates/: mysqld.cnf
ansible/roles/grafana/defaults/: main.yml
ansible/roles/grafana/tasks/: main.yml
ansible/roles/node-exporter/defaults/: main.yml
ansible/roles/node-exporter/tasks/: main.yml
ansible/roles/prometheus/defaults/: main.yml
ansible/roles/prometheus/tasks/: main.yml
ansible/roles/prometheus/templates/: prometheus.yaml.j2
ansible/roles/replicator-mysql1/defaults/: main.yml
ansible/roles/replicator-mysql1/tasks/: main.yml  replicator-mysql1.yml
ansible/roles/replicator-mysql2/defaults/: main.yml
ansible/roles/replicator-mysql2/tasks/: main.yml  replicator-mysql2.yml
src/: config.py  database.py  dependencies.py  main.py  smtp_client.py  smtp_server.py
src/dtos/: email.dto.py
src/migrations/: env.py
src/migrations/versions/: 8dc1e06a5918_add_emails_table.py  91d393ed1205_add_email_data_table.py  b515a8ac999d_create_email_data_table.py  e84a7d29e98f_add_emails_table.py
src/models/: email_data.py  emails.py
src/routes/: email.py
src/service/: email.py  email_data.py
(+9 files in other folders)
